# roboteam_mimir

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: BuildBullet.cmake
config/robot/: DEFAULT.ini  RTT.ini
config/situations/: BallTestFormation.ini  DEFAULT.ini  DivAStartFormation.ini
config/world/: divisionB.ini
src/: CMakeLists.txt  mimir.cpp
src/app/: CMakeLists.txt  ConfigWidget.cpp  ConfigWidget.h  Simulator.h  Situation.h  Timer.h  WorldConfig.h
src/app/mimir/: ConfigWidget.cpp  ConfigWidget.h  RobotConfig.h  Simulator.cpp  Simulator.h  Situation.cpp  Situation.h  Timer.cpp  WorldConfig.cpp  WorldConfig.h  mimir.cpp
src/app/mimir/interface/: DebugDrawer.cpp  DebugDrawer.h  DebugVisualization.cpp  DebugVisualization.h  MainWindow.cpp  SettingsWidget.cpp  Visualizer.cpp  Visualizer.h  Visualizer3D.cpp  Visualizer3D.h  VisualizerBall.cpp  VisualizerBall.h  VisualizerBox.cpp  VisualizerBox.h  VisualizerCamera.cpp  VisualizerCamera.h  VisualizerCylinder.cpp  VisualizerDebugDrawer.cpp  VisualizerDebugDrawer.h  VisualizerWorld.cpp  VisualizerWorld.h  fragment_shader.glsl  vertex_shader.glsl  vshader.glsl
src/graphics/: CMakeLists.txt  Light.cpp  Light.h  Material.cpp  TexturedGroundPlane.cpp  VisualizedBall.cpp  VisualizedBox.cpp  VisualizedCylinder.cpp  VisualizedRobotHull.cpp  VisualizedSimBall.cpp  VisualizedSimBot.cpp  VisualizedSimField.cpp  VisualizedSimWorld.cpp  VisualizerBall.cpp  VisualizerBox.cpp  VisualizerCylinder.cpp
src/graphics/include/graphics/: Material.h  TexturedGroundPlane.h  VisualizedBall.h  VisualizedBox.h  VisualizedCylinder.h  VisualizedRobotHull.h  VisualizedSimBall.h  VisualizedSimBot.h  VisualizedSimField.h  VisualizedSimWorld.h  VisualizerBall.h  VisualizerBox.h  VisualizerCylinder.h  VisualizerUtil.h
src/interface/: CMakeLists.txt  DebugDrawer.cpp  DebugDrawer.h  DebugVisualization.cpp  DebugVisualization.h  MainWindow.cpp  SettingsWidget.cpp  SettingsWidget.h  Visualizer.cpp  Visualizer.h  fshader.glsl  vshader.glsl
src/interface/include/interface/: MainWindow.h
src/net/: CMakeLists.txt  Publisher.cpp  Publisher.h  Receiver.cpp  Receiver.h
src/net/include/net/: Receiver.h
src/proto/: CMakeLists.txt  Vector2f.proto  messages_robocup_ssl_detection.proto  messages_robocup_ssl_geometry.proto  messages_robocup_ssl_wrapper.proto  mimir_robotcommand.proto
src/simulator/: CMakeLists.txt  Camera.cpp  Camera.h  CollisionShared.cpp  ConfigWidget.cpp  ConfigWidget.h  DebugDrawer.cpp  DebugDrawer.h  RobotConfig.cpp  RobotConfig.h  RobotConfigWidget.cpp  RobotConfigWidget.h  RobotMesh.cpp  RobotMesh.h  RobotSettings.h  SimBall.cpp  SimBot.cpp  SimField.cpp  SimWorld.cpp  SimWorld.h  Simulator.cpp  Simulator.h  WorldConfig.cpp  WorldConfig.h  WorldSettings.h  simWorld.cpp  simWorld.h
src/simulator/config/: RobotConfig.cpp  RobotConfig.h  RobotSettings.cpp  RobotSettings.h  Situation.cpp  SituationBall.cpp  SituationBall.h  SituationBot.cpp  SituationBot.h  SituationWorld.cpp  SituationWorld.h  WorldConfig.cpp  WorldConfig.h  WorldSettings.cpp  WorldSettings.h
src/simulator/config/robot/: RTT.ini
src/simulator/config/situations/: BallTestFormation.ini  DivAStartFormation.ini
src/simulator/config/world/: divisionA.ini  divisionAV3.ini  divisionB.ini
src/simulator/include/simulator/: Camera.h  CollisionShared.h  RobotMesh.h  SimBall.h  SimBot.h  SimField.h  SimWorld.h  Simulator.h
src/simulator/include/simulator/settings/situation/: SituationBall.h  SituationBot.h  SituationWorld.h
src/simulator/net/: Receiver.cpp
src/simulator/physics/: BaseSimBot.h  Camera.cpp  Camera.h  CollisionShared.cpp  CollisionShared.h  RobotMesh.cpp  RobotMesh.h  SimBall.cpp  SimBall.h  SimBot.cpp  SimBot.h  SimField.cpp  SimField.h  SimWorld.cpp  SimWorld.h  WheelGroundInteraction.cpp  WheelGroundInteraction.h
src/simulator/settings/: RobotSettings.cpp  RobotSettings.h  WorldSettings.cpp  WorldSettings.h
src/simulator/settings/situation/: SituationBall.cpp  SituationBot.cpp  SituationWorld.cpp  SituationWorld.h
src/simulator/situations/: Situation.cpp  Situation.h  SituationBall.cpp  SituationBall.h  SituationBot.cpp  SituationBot.h
src/simulator/utilities/: Random.cpp  Random.h  Timer.cpp  Timer.h
test/: CMakeLists.txt  main.cpp
test/net/: PublisherTest.cpp  ReceiverTest.cpp  mockReceiver.h
test/simulator/: ConfigWidgetTest.cpp
